# agentic_ai_fin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 00_PRD_기획_및_제품요구사항.md  01_요구사항정의서.md  02_아키텍처설계서.md  03_인터페이스_및_계약명세서.md  04_프롬프트_및_컨텍스트설계서.md  05_테스트시나리오_및_QA계획서.md  HANDOFF_20260409_Agentic_PoC_Phase3.md  HANDOFF_20260413_Agentic_Pilot_NextSteps.md  HANDOFF_STABLE_RC1_PILOT.md  PILOT_DEPLOY_GUIDE.md  PILOT_FEEDBACK_AND_V2_BACKLOG.md  PILOT_SCENARIO_CHECKLIST.md  RELEASE_NOTES_v1.0.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/playwright-report/: index.html
frontend/tests/: e2e_pilot.spec.ts  upload.spec.ts
scripts/: README.md  db_test.py  debug_file.py  fix_tests.py  generate_test_pdfs.py  parse_test.py  refactor_document_parser.py  refactor_fastapi.py  refactor_registry.py  refactor_worker_py.py  refactor_worker_tasks.py  run_demo_scenario.py
src/agentic_poc/: __init__.py  config.py  database.py  graph.py  registry.py  schemas.py  state.py
src/agentic_poc/adapters/: __init__.py  (+5 more)
tests/: conftest.py  generate_fixtures.py  test_adapter_pdf.py  test_adapter_synonyms.py  test_adapters.py  test_benchmark_pipeline.py  test_document_parser.py  test_e2e_upload_workflow.py  test_fastapi_security.py  test_get_workflow_metrics.py  test_planner_routing.py  test_upload_endpoint.py  test_vlm_extractor.py  test_worker_cleanup.py  test_workflow_batch.py  test_workflow_delete.py
tests/fixtures/: grant_raw.xlsx  payroll_raw.xlsx  treasury_raw.xlsx  withholding_raw.xlsx
(+17 files in other folders)
