[project]
name = "agentic-poc"
version = "0.1.0"
description = "Agentic AI Orchestration PoC Runtime Skeleton v6"
requires-python = ">=3.11"
dependencies = [
    "python-multipart>=0.0.9",
    "pydantic>=2.6.4",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "pytest>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic-settings",
    "langchain-google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "PyJWT",
    "slowapi",
    "pytest-asyncio",
    "celery[redis]",
    "redis",
    "nest-asyncio",
    "pdfplumber>=0.10.0",
    "reportlab>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
